tests/src/frontend/typechecking/invalid/unbound_field_this.sk
class X(a: Int) {
  fun b(): void {
    this.z
  }

  static fun c(): void {
    void
  }
}
